# Jaskier

./: .gitignore  LICENSE  Makefile  README.md  positions.csv  requirements.txt  setup.cfg  setup.py
jaskier/: __init__.py  cli.py  data_loader.py  defaults.py  financial.py  renders.py  utils.py  version.py
tests/: test_cli.py  test_example.py
