[metadata]
name = jaskier
author = Nathan Derave
author_email = deravenathan@hotmail.com
description = Toss a coin to your portfolio manager
long_descripion = file:README.md

[options]
setup_requires =
    setuptools
packages = find_namespace:
python_requires = >=3

[options.entry_points]
console_scripts =
	jaskier=jaskier.cli:cli

[options.package_data]
* =  requirements.txt
     *.cfg


[options.extras_require]
dev = 
    flake8
    flake8-docstrings
    pytest
    pytest-cov
    black
    ipykernel